[project]
name = "flet-quill"
version = "0.1.0"
description = "FletQuill control for Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Josh Weaver", email = "joshuatweaver2000@gmail.com" }
]
dependencies = [
    "flet==0.28.3",
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "striprtf>=0.0.26",
    "markdown>=3.6",
]

[project.urls]
Homepage = "https://mydomain.dev"
Documentation = "https://github.com/MyGithubAccount/flet-quill"
Repository = "https://github.com/MyGithubAccount/flet-quill"
Issues = "https://github.com/MyGithubAccount/flet-quill/issues"

[tool.setuptools.package-data]
"flutter.flet_quill" = ["**/*"]

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
    "mkdocs", 
    "mkdocs-material",
    "mkdocstrings[python]"
]

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}
mkdocs = "*"
mkdocstrings = { extras = ["python"], version = "*" }
mkdocs-material = "*"

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
